syntax = "proto3";

package proto;
import "base.proto";

//cmd:1001
message LoginReq{
	string user_name = 1;
	string user_pass = 2;
}
//cmd:1002
message LoginRes{
	LoginStatus status	= 1;
	PlayerAttr  attr	= 2;
}